dropshot/tests/fail/bad_endpoint10.stderr
error[E0271]: type mismatch resolving `<String as TypeEq>::This == HttpError`
  --> $DIR/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^
   |      |
   |      expected struct `HttpError`, found struct `String`
   |      required by this bound in `validate_return_type`

error[E0277]: the trait bound `fn(Arc<RequestContext<()>>) -> impl Future {<impl From<bad_error_type> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_error_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> $DIR/bad_endpoint10.rs:14:10
   |
14 | async fn bad_error_type(
   |          ^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(Arc<RequestContext<()>>) -> impl Future {<impl From<bad_error_type> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_error_type}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |         FuncParams: Extractor + 'static,
   |                                 ------- required by this bound in `ApiEndpoint::<Context>::new`
